# casino-number-guessing-game

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
inc/Game/: Game.h
inc/Player/: Player.h
src/: game.cpp  main.cpp  player.cpp
tools/: build.sh  clean.sh
